--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Manan
 
 # Short bio or description (displayed in the header)
-description: Notes on Machine Learning and Biology
+description: Joys of Scifi
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: 
   instagram:
-  linkedin: manan-lalit-79324963/
+  linkedin: 
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
